# homework

./: readme.txt
adapter/: main.cpp
builder/: main.cpp
chain-of-responsibility/: main.cpp
composite/: main.cpp
decorator/: main.cpp
factory/: animal.hpp  main  main.cpp  makefile  readme.txt
flyweight/: main.cpp
multithread/: main.cpp
observer/: main.cpp
proxy/: main.cpp
singleton/: database_manager.hpp  main.cpp  makefile
tests-for-chain-of-reponsibility/: CMakeLists.txt  ip_filter.hpp  main.cpp  test.cc
